--- a/.github/workflows/cfn_lint.yml
+++ b/.github/workflows/cfn_lint.yml
@@ -12,19 +12,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout cfn
-        if: github.event_name == 'pull_request'
+      - name: Checkout
         uses: actions/checkout@v2
-        with:
-         ref: ${{ github.event.pull_request.head.sha }} # Makes sure we get the latest commit from the PR
-      - name: Testing with CFN Lint Command
-        uses: scottbrenner/cfn-lint-action@v2
-        run: |
-          setopt -s globstar # enable globbing
-          cfn-lint --version $d
-          cfn-lint -t ./**/*.yaml $d
-      
-          
 
+      - name: Setup Cloud Formation Linter with Latest Version
+        uses: scottbrenner/cfn-lint-action@v2
+
+      - name: Print the Cloud Formation Linter Version & run Linter.
+        run: |
+          cfn-lint --version
+          cfn-lint -t ./template.yml
 
 
