--- a/.github/workflows/cfn_lint.yml
+++ b/.github/workflows/cfn_lint.yml
@@ -12,14 +12,25 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
+      - name: Checkout cfn
+        if: github.event_name == 'pull_request'
         uses: actions/checkout@v2
+        with:
+         ref: ${{ github.event.pull_request.head.sha }}
+
+      - name: Check out code on branch
+        if: github.event_name != 'pull_request'
+        uses: actions/checkout@v2
+        with:
+         ref: ${{ env.BRANCH }}
 
       - name: Setup Cloud Formation Linter with Latest Version
         uses: scottbrenner/cfn-lint-action@v2
 
       - name: Print the Cloud Formation Linter Version & run Linter.
         run: |
+          cd $GITHUB_WORKSPACE
+          setopt -s globstar
           cfn-lint --version
           cfn-lint -t ./template.yml
 
