--- a/.github/workflows/cfn_lint.yml
+++ b/.github/workflows/cfn_lint.yml
@@ -7,22 +7,22 @@ on:
     branches:
       - master
 
+
 jobs:
   cloudformation-linter:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout cfn
-        if: github.event_name == 'pull_request'
+      - name: Checkout
         uses: actions/checkout@v2
-        with:
-         ref: ${{ github.event.pull_request.head.sha }} # Makes sure we get the latest commit from the PR
-      - name: Testing with CFN Lint Command
+
+      - name: Setup Cloud Formation Linter with Latest Version
         uses: scottbrenner/cfn-lint-action@v2
+
+      - name: Print the Cloud Formation Linter Version & run Linter.
         run: |
-          setopt -s globstar # enable globbing
-          cfn-lint --version 
-          cfn-lint -t ./**/*.yaml 
+          cfn-lint --version
+          cfn-lint -t ./template.yml
 
 
 
