--- a/.github/workflows/cfn_lint.yml
+++ b/.github/workflows/cfn_lint.yml
@@ -1,70 +1,3 @@
-name: Lint CloudFormation Templates
-
-on:
-  pull_request:
-    paths:
-       - '**.yaml'
-    branches:
-      - master
-
-
-jobs:
-  cloudformation-linter:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout cfn
-        if: github.event_name == 'pull_request'
-        uses: actions/checkout@v2
-
-      - name: Setup Cloud Formation Linter with Latest Version
-        uses: scottbrenner/cfn-lint-action@v2
-
-      - name: Print the Cloud Formation Linter Version & run Linter.
-        run: |
-          cfn-lint --version
-          cfn-lint -t ./template.yml
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 # name: Lint CloudFormation Templates
 
 # on:
@@ -74,6 +7,7 @@ jobs:
 #     branches:
 #       - master
 
+
 # jobs:
 #   cloudformation-linter:
 #     runs-on: ubuntu-latest
@@ -82,23 +16,89 @@ jobs:
 #       - name: Checkout cfn
 #         if: github.event_name == 'pull_request'
 #         uses: actions/checkout@v2
-#         with:
-#          ref: ${{ github.event.pull_request.head.sha }}
-
-#       - name: Check out code on branch
-#         if: github.event_name != 'pull_request'
-#         uses: actions/checkout@v2
-#         with:
-#          ref: ${{ env.BRANCH }}
 
 #       - name: Setup Cloud Formation Linter with Latest Version
 #         uses: scottbrenner/cfn-lint-action@v2
 
 #       - name: Print the Cloud Formation Linter Version & run Linter.
 #         run: |
-#           cd $GITHUB_WORKSPACE
-#           setopt -s globstar
 #           cfn-lint --version
 #           cfn-lint -t ./template.yml
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+name: Lint CloudFormation Templates
+
+on:
+  pull_request:
+    paths:
+       - '**.yaml'
+    branches:
+      - master
+
+jobs:
+  cloudformation-linter:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout cfn
+        if: github.event_name == 'pull_request'
+        uses: actions/checkout@v2
+        with:
+         ref: ${{ github.event.pull_request.head.sha }}
+
+      - name: Check out code on branch
+        if: github.event_name != 'pull_request'
+        uses: actions/checkout@v2
+        with:
+         ref: ${{ env.BRANCH }}
+
+      - name: Setup Cloud Formation Linter with Latest Version
+        uses: scottbrenner/cfn-lint-action@v2
+
+      - name: Print the Cloud Formation Linter Version & run Linter.
+        run: |
+          cd $GITHUB_WORKSPACE
+          setopt -s globstar
+          cfn-lint --version
+          cfn-lint -t ./template.yml
 
 
