--- a/.github/workflows/cfn_lint.yml
+++ b/.github/workflows/cfn_lint.yml
@@ -17,14 +17,18 @@ jobs:
         uses: actions/checkout@v2
         with:
          ref: ${{ github.event.pull_request.head.sha }} # Makes sure we get the latest commit from the PR
+
       - name: Check out code on branch
         if: github.event_name != 'pull_request'
         uses: actions/checkout@v2
         with:
          ref: ${{ env.BRANCH }}
+         
       - name: Testing with CFN Lint Command
         uses: scottbrenner/cfn-lint-action@v2
         run: |
-          setopt -s globstar # enable globbing
-          cfn-lint --version $d
-          cfn-lint -t ./**/*.yaml $d
+          cd $GITHUB_WORKSPACE
+           for d in $(find . -type d \( -not -path '**/.yaml*/**' -and -path './env/**' \) -exec sh -c '(ls -p "{}"|grep />/dev/null)||echo "{}"' \; ); do
+            cfn-lint --version $d
+            cfn-lint -t ./**/*.yaml $d
+           done
