--- a/.github/workflows/cfn_lint.yml
+++ b/.github/workflows/cfn_lint.yml
@@ -23,9 +23,11 @@ jobs:
         uses: actions/checkout@v2
         with:
          ref: ${{ env.BRANCH }}
-         
-      - name: Testing with CFN Lint Command
+
+      - name: Setup Cloud Formation Linter with Latest Version
         uses: scottbrenner/cfn-lint-action@v2
+
+      - name: Testing with CFN Lint Command
         run: |
           cd $GITHUB_WORKSPACE
            for d in $(find . -type d \( -not -path '**/.yaml*/**' -and -path './env/**' \) -exec sh -c '(ls -p "{}"|grep />/dev/null)||echo "{}"' \; ); do
