mast merge work

--- a/.github/workflows/cfn_lint.yml
+++ b/.github/workflows/cfn_lint.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Testing with CFN Lint Command
         run: |
           cd $GITHUB_WORKSPACE
-           for d in $(find . -type d \( -not -path '**/.yaml*/**' -and -path './env/**' \) -exec sh -c '(ls -p "{}"|grep />/dev/null)||echo "{}"' \; ); do
+           for d in $(find . -type d \( -not -path '**/.yaml*/**' -and -path './env/**' \) -exec sh -c '(ls -p "{}"|grep />/dev/null)||echo "{}"' ); do
             cfn-lint --version $d
             cfn-lint -t ./**/*.yaml $d
            done
