--- a/.github/workflows/cfn_lint.yml
+++ b/.github/workflows/cfn_lint.yml
@@ -1,11 +1,6 @@
 name: Lint CloudFormation Templates
 
-on:
-  pull_request:
-    paths:
-       - '**.yaml'
-    branches:
-      - master
+on: push
 
 jobs:
   cloudformation-linter:
@@ -13,16 +8,10 @@ jobs:
 
     steps:
       - name: Checkout cfn
-        if: github.event_name == 'pull_request'
         uses: actions/checkout@v2
-        with:
-         ref: ${{ github.event.pull_request.head.sha }} # Makes sure we get the latest commit from the PR
 
       - name: Check out code on branch
-        if: github.event_name != 'pull_request'
         uses: actions/checkout@v2
-        with:
-         ref: ${{ env.BRANCH }}
 
       - name: Setup Cloud Formation Linter with Latest Version
         uses: scottbrenner/cfn-lint-action@v2
@@ -30,7 +19,6 @@ jobs:
       - name: Testing with CFN Lint Command
         run: |
           cd $GITHUB_WORKSPACE
-           for d in $(find . -type d \( -not -path '**/.yaml*/**' -and -path './env/**' \) -exec sh -c '(ls -p "{}"|grep />/dev/null)||echo "{}"' ); do
-            cfn-lint --version $d
-            cfn-lint -t ./**/*.yaml $d
-           done
+          cfn-lint --version 
+          cfn-lint -t ./**/*.yaml 
+          
