--- a/.github/workflows/cfn_lint.yml
+++ b/.github/workflows/cfn_lint.yml
@@ -19,6 +19,8 @@ jobs:
       - name: Testing with CFN Lint Command
         run: |
           cd $GITHUB_WORKSPACE
-          cfn-lint --version 
-          cfn-lint -t ./**/*.yaml 
+          for d in $(find . -type d \( -not -path '**/.terraform*/**' -and -path './env/**' -or -path './modules/**' \) -exec sh -c '(ls -p "{}"|grep />/dev/null)||echo "{}"' \; | sort | comm -12 terraform_v11_dirs.txt -); do
+            cfn-lint --version $d
+            cfn-lint -t ./**/*.yaml $d
+          done
           
