--- a/.github/workflows/cfn_lint.yml
+++ b/.github/workflows/cfn_lint.yml
@@ -21,9 +21,6 @@ jobs:
           name: cfn_results
           path: ${{ github.workspace }}
         run: |
-          cd $GITHUB_WORKSPACE
-          for d in $(find . -type d \(-path './env/**' -or -path './cloudformation/**' \) -exec sh -c '(ls -p "{}"|grep />/dev/null)||echo "{}"' \;); do
-            cfn-lint --version $d
-            cfn-lint -t ./**/*.yaml $d
-          done
+            cfn-lint --version 
+            cfn-lint -t ./**/*.yaml 
           
