--- a/.github/workflows/cfn_lint.yml
+++ b/.github/workflows/cfn_lint.yml
@@ -37,5 +37,5 @@ jobs:
       - name: Print the CloudFormation linter version and run linter
         run: |
           cd $GITHUB_WORKSPACE
-          for fname in $(find ./cloudformation | egrep ".(yaml|yml|json)$"); do ; cfn-lint --template "${fname}" ; done
-          for fname in $(find ./templates/cloudformation | egrep ".(yaml|yml|json)$"); do ; cfn-lint --template "${fname}" ; done
+          for fname in $(find ./cloudformation | egrep ".(yaml|yml|json)$"); do cfn-lint --template "${fname}" ; done
+          for fname in $(find ./templates/cloudformation | egrep ".(yaml|yml|json)$"); do cfn-lint --template "${fname}" ; done
