--- a/cloudformation/cfntestagain.yaml
+++ b/cloudformation/cfntestagain.yaml
@@ -5,7 +5,7 @@ Resources:
     Type: "AWS::EC2::Instance"
     Properties: 
       ImageId: "ami-0ff8a91507f77f867" #Another comment -- This is a Linux AMI
-      InstanceType: d3en.12xlarge
+      InstanceType: t2.micro
       KeyName: testkey
       BlockDeviceMappings:
         -
