--- a/.github/workflows/cfn_lint.yml
+++ b/.github/workflows/cfn_lint.yml
@@ -24,6 +24,7 @@ jobs:
       matrix:
         python: [3.8]
     steps:
+      - name: Checkout code
       - uses: actions/checkout@v2
 
       - name: Setup Python
